# flake8-use-fstring

./: .coveragerc  .flake8  .gitignore  .travis.yml  README.md  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-publish.yml  test.yml
flake8_use_fstring/: __init__.py  base.py  format.py  percent.py  prefix.py  utils.py
tests/: conftest.py  example.py  test_00.py
